deploy using GitHub Action

--- a/docs.tex
+++ b/docs.tex
@@ -75,7 +75,7 @@
 \title{BookML\@: automated LaTeX to \href{https://bookdown.org/yihui/bookdown/html.html\#gitbook-style}{bookdown}-style HTML and SCORM, powered by \href{https://dlmf.nist.gov/LaTeXML/}{LaTeXML}}
 \author{Vincenzo Mantova}
 
-\date{21\textsuperscript{st} August 2024}
+\date{3\textsuperscript{rd} October 2024}
 
 \begin{document}
 
