--- a/bookml.sty
+++ b/bookml.sty
@@ -32,6 +32,8 @@
 
 \ProcessOptions
 
+\newcommand{\BookMLversion}{@VERSION@}
+
 % import system latexml.sty if available, otherwise use local copy
 \IfFileExists{latexml.sty}{
   \RequirePackage{latexml}
