--- a/template/template.tex
+++ b/template/template.tex
@@ -46,8 +46,8 @@ In all cases, consult \texttt{template.tex} for how to use more advanced BookML 
 For use with Overleaf (requires paid account):
 \begin{enumerate}
   \item Upload the template to a new Overleaf project. Ensure that the \texttt{.github} folder is also included.
-  \item From the Overleaf menu, sync the project with a new (private) GitHub repository. After one or two minutes, the new repository will have a release containing the various BookML outputs.
-  \item Every time you push your Overleaf changes to GitHub, a new build will start and generate a new release.
+  \item From the Overleaf menu, sync the project with a new (private) GitHub repository. After one or two minutes, you will receive an email announcing that the repository has a new a release containing the various BookML outputs. Follow the link in the email to download them.
+  \item Every time you sync your Overleaf changes to GitHub, a new build will start and generate a new release.
   \item For a moderate speed up, replace \texttt{bookml:latest} with one of
   \begin{itemize}
       \item \texttt{bookml-basic:latest},
