--- a/bookml.sty
+++ b/bookml.sty
@@ -24,6 +24,8 @@
 \DeclareOption{style=plain}{}
 \DeclareOption{style=gitbook}{}
 \DeclareOption{mathjax=2}{}
+\DeclareOption{mathjax=3}{}
+\DeclareOption{mathjax=4}{}
 \DeclareOption{nomathjax}{}
 \DeclareOption{_bmlimages}{\bml@imagestrue}
 \DeclareOption{htmlsyntax}{\bml@htmlsyntaxtrue}
