--- a/docs.tex
+++ b/docs.tex
@@ -94,7 +94,7 @@
     <a href="https://github.com/vlmantova/bookml/stargazers"><img alt="Stargazers on GitHub" src="https://img.shields.io/github/stars/vlmantova/bookml?logo=github"/></a>
   }
 
-  Formats: \href{https://vlmantova.github.io/bookml/}{GitBook} (html), \href{https://vlmantova.github.io/bookml/index.plain.html}{plain} with Latin Modern (html), \href{https://vlmantova.github.io/bookml/docs.pdf}{PDF}, \href{https://github.com/vlmantova/bookml/blob/docs/docs.tex}{\LaTeX{} source}.
+  Formats: \href{https://vlmantova.github.io/bookml/}{GitBook} (html), \href{index.plain.html}{plain} with Latin Modern (html), \href{https://vlmantova.github.io/bookml/docs.pdf}{PDF}, \href{https://github.com/vlmantova/bookml/blob/docs/docs.tex}{\LaTeX{} source}.
 
   For a more beginner friendly guide see the \href{https://vlmantova.github.io/bookmlleeds/}{Leeds BookML guide}.
 \end{center}
